// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVRadio > renders correctly when not selected 1`] = `
<v-radio-stub
  color="primary"
  data-v-360714cf=""
  density="default"
  error="false"
  falseicon="$radioOff"
  inline="false"
  modelvalue="false"
  ripple="true"
  trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
  value="false"
  valuecomparator="[Function]"
/>
`;

exports[`EvoconVRadio > renders correctly when selected 1`] = `
<v-radio-stub
  color="primary"
  data-v-360714cf=""
  density="default"
  error="false"
  falseicon="$radioOff"
  inline="false"
  modelvalue="false"
  ripple="true"
  trueicon="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
  value="true"
  valuecomparator="[Function]"
/>
`;
